<resources>
    <string name="app_name">Hidrantes Cerca</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista">Lista de Hidrantes</string>
    <string name="title_activity_mapa_general">Navegar</string>
    <string name="title_activity_editar_hidrante">Informacion de Hidrante</string>
    <string name="title_activity_mapa_nuevo">Nuevo Hidrante</string>
    <string-array name="estados">
        <item>Activo</item>
        <item>Inactivo</item>
        <item>Eliminado</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <string name="user_profile_group_title">Perfil de Usuario</string>
    <string name="username_setting">Usuario</string>
    <string name="username_setting_summary">Usuario: %s</string>
    <string name="server_settings_group">Conexión al Servidor</string>
    <string name="server_url_setting">URL del servidor</string>
    <string name="server_url_setting_summary">URL del servidor de Hidrantes Cerca de tu organización</string>
    <string name="about_group_title">Acerca de</string>
    <string name="password_setting">Contraseña</string>
</resources>
